Update Minecraft-Launcher.ps1